[package]
name = "velociraptor_api"
version = "0.1.0"
edition = "2021"
authors = ["Hilko Bengen <bengen@hilluzination.de>"]
description = "API client for Velociraptor (https://github.com/Velocidex/velociraptor)"
homepage = "https://github.com/hillu/velociraptor-api-rs"
repository = "https://github.com/hillu/velociraptor-api-rs"
license = "LGPL-3.0-or-later"
publish = false
keywords = ["cli", "api", "forensic", "command-line"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
clap = { version = "3", features = ["derive"] }
futures = "0.3.28"
prost = "0.11"
protobuf = "3"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.9", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = "0.9.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "velociraptor-client"
path = "src/client/main.rs"

