[package]
name = "velociraptor_api"
version = "0.1.0"
edition = "2021"
authors = ["Hilko Bengen <bengen@hilluzination.de>"]
description = "API client for Velociraptor (https://github.com/Velocidex/velociraptor)"
homepage = "https://github.com/hillu/velociraptor-api-rs"
repository = "https://github.com/hillu/velociraptor-api-rs"
license = "LGPL-3.0-or-later"
publish = false
keywords = ["cli", "api", "forensic", "command-line"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
builder-pattern = "0.4.2"
clap = { version = "3", default_features = false, features = ["std", "derive"] }
env_logger = "0.10.0"
log = "0.4.19"
prost = "0.11"
serde = { version = "1", default_features = false, features = ["serde_derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", default_features = false, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", default_features = false }
tonic = { version = "0.9", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = "0.9.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "velociraptor-client"
path = "src/client/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
